k8s-yamls-master/k8s-yamls-master/live/All-Clusters-BASE-REQUIRED/kube-reports/caprod/2-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/configuration-snippet: |
      sub_filter '<head>' '<head> <base href="/report/">'; #add base url
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
  name: kube-reports
  namespace: itsystems-prod
spec:
  ingressClassName: nginx
  rules:
  - host: k8caprod.medimpact.com
    http:
      paths:
      - path: /report/?(.*)
        pathType: Prefix
        backend:
          service:
           name: kube-reports
           port:
             number: 8080
  tls:
  - hosts:
    - k8caprod.medimpact.com
